// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component render should render correctly 1`] = `
<Fragment>
  <ForwardRef
    className="ins-c-conditional-filter "
    id="test-id"
    onChange={[Function]}
    onKeyDown={[Function]}
    value=""
    widget-type="InsightsInput"
  />
  <SearchIcon
    className="ins-c-search-icon"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
    title={null}
  />
</Fragment>
`;

exports[`Text component render should render placeholder 1`] = `
<Fragment>
  <ForwardRef
    className="ins-c-conditional-filter "
    id="test-id"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="some-placeholder"
    value=""
    widget-type="InsightsInput"
  />
  <SearchIcon
    className="ins-c-search-icon"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
    title={null}
  />
</Fragment>
`;

exports[`Text component render should render value 1`] = `
<Fragment>
  <ForwardRef
    className="ins-c-conditional-filter "
    id="test-id"
    onChange={[Function]}
    onKeyDown={[Function]}
    value=""
    widget-type="InsightsInput"
  />
  <SearchIcon
    className="ins-c-search-icon"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
    title={null}
  />
</Fragment>
`;
